--- a/event/package.json
+++ b/event/package.json
@@ -22,7 +22,10 @@
   "dependencies": {
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/microservices": "^11.1.1",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/swagger": "^11.2.0",
+    "mongodb": "^6.16.0",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
   },
